--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <meta charset=utf-8 />
-      <title>Leaflet, Mapbox and D3JS test</title>
+      <title>Culture Code Cities Cells</title>
       <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
       
       <script src='https://api.tiles.mapbox.com/mapbox.js/v2.0.1/mapbox.js'></script>
@@ -49,7 +49,7 @@
         https://www.mapbox.com/mapbox.js/example/v1.0.0/plain-leaflet/  
       ********************************************************/
 
-      var mapboxTiles = L.tileLayer('https://{s}.tiles.mapbox.com/v3/chenrick.2yj2x1or/{z}/{x}/{y}.png');
+      var mapboxTiles = L.tileLayer('https://{s}.tiles.mapbox.com/v3/chenrick.xx6tuik9/{z}/{x}/{y}.png');
 
       var params = {
         center: [0,0],
@@ -104,7 +104,7 @@
 
           layer.setStyle({
             fill: true,
-            fillOpacity: 0.3,
+            fillOpacity: 0.5,
             fillColor: '#60FFBE'
           });
 
@@ -134,7 +134,7 @@
 
         var style = {          
             color: "#60FFBE",
-            weight: 1,
+            weight: 0,
             opacity: 0.8,
             fillOpacity: 0                       
         };
